# llm-knowledge-graph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: experiment.ipynb
src/llm_knowledge_graph/: __init__.py
tests/: neo4j_test.py
